--- a/src/css/shopping-trolley.css
+++ b/src/css/shopping-trolley.css
@@ -32,6 +32,7 @@ body {
     height: 40px;
     line-height: 40px;
     text-align: center;
+    position: relative;
 }
 .head_return > img{
     position: absolute;
