--- a/src/css/login2.css
+++ b/src/css/login2.css
@@ -99,17 +99,17 @@
     text-align: center;
 }
 
-.complete-wizard{
+.wizard{
     width: 100%;
     overflow: auto;
     padding-top: 30px;
 }
 
-.complete-wizard > div{
+.wizard > div{
     width: 33%;
     float: left;
 }
-.complete-wizard > div > div:first-child{
+.wizard > div > div:first-child{
     height: 27px;
     width: 27px;
     background-color: #6d1c7e;
@@ -118,7 +118,7 @@
     line-height: 27px;
     margin: 0 auto;
 }
-.complete-wizard > div > div:first-child::after{
+.wizard > div > div:first-child::after{
     content: "";
     height: 3px;
     width: 30%;
@@ -128,10 +128,10 @@
     top: 42px;
     margin: 0 20px;
 }
-.complete-wizard > div:nth-child(3) > div:first-child::after{
+.wizard > div:nth-child(3) > div:first-child::after{
     display: none;
 }
-.complete-wizard > div > div:nth-child(2){
+.wizard > div > div:nth-child(2){
     padding-top: 5px;
 }
 
