--- a/src/css/total.css
+++ b/src/css/total.css
@@ -1,19 +1,4 @@
-html{
-    font-size: 16px;
-    overflow-x: hidden;
-    outline: none;
-    overflow-y: hidden;
-}
-*{
-    outline: none;
-}
-body {
-    margin:0;
-    padding: 0;
-    font-family: Microsoft YaHei; 
-    background-color: #efc6ef;
-    background: url(../images/body_bg.png)repeat-x  0 0 ;
-}
+
 .row{
     margin:0;
     padding: 0;
@@ -82,6 +67,10 @@ body {
     overflow: auto;
     padding-top: 30px;
     padding-bottom: 75px;
+}
+.wizard{
+    padding-bottom: 25px !important;
+
 }
 
 .complete-wizard > div{
@@ -211,5 +200,11 @@ body {
     bottom: 4px;
     width: 15%;
 
+}
+.numberLogin3{
+    color: red !important;
+    left: 20px;
+    position: absolute;
+    top:0px !important;
 }
         
