--- a/src/css/customer.css
+++ b/src/css/customer.css
@@ -145,7 +145,6 @@ body {
 /*内容*/
 .shopping-trolley-container{
     width: 100%;
-    margin-bottom: 20px;
 }
 .shopping-trolley-container_p{
     position: relative;
@@ -166,7 +165,8 @@ body {
     position: relative;
     left: 15%;
     top: 30%;
-    padding-top: 10px;
+    padding-top: 15%;
+    padding-bottom: 15%;
 }
 .shopping-trolley-container_p_right > h5,
 .shopping-trolley-container_p_right > h4
