--- a/src/css/details.css
+++ b/src/css/details.css
@@ -41,6 +41,7 @@ body {
           height: 50px;
           font-size:15px; 
           width: 100%;
+          padding-top:10px;
           padding-left:10px;
           padding-right: 0;
       }
