--- a/src/css/login1.css
+++ b/src/css/login1.css
@@ -16,6 +16,7 @@ body{
     background-color:#fff; 
     border-radius: 4px;
     padding: 0 10px 120px 10px ;
+    margin-bottom: 0;
 
 }
 .loginFont{
