--- a/src/css/login2.css
+++ b/src/css/login2.css
@@ -121,8 +121,30 @@ body{
     color: #fff;
     line-height: 27px;
     margin: 0 auto;
+    position: relative;
+    z-index: 99;
 }
-.wizard > div > div:first-child::after{
+.wizard::before {
+    content: "";
+    height: 3px;
+    width: 30%;
+    background-color: #6d1c7e;
+    display: block;
+    position: absolute;
+    top: 42px;
+    left: 20%;
+}
+.wizard::after {
+    content: "";
+    height: 3px;
+    width: 30%;
+    background-color: #cccccc;
+    display: block;
+    position: absolute;
+    top: 42px;
+    left: 50%;
+}
+.wizard > div:first-child > div:first-child::after{
     content: "";
     height: 3px;
     width: 30%;
@@ -137,6 +159,9 @@ body{
 }
 .wizard > div > div:nth-child(2){
     padding-top: 5px;
+}
+.wizard > div:nth-child(3) > div:first-child{
+    background-color: #cccccc;
 }
 
 
@@ -159,3 +184,4 @@ body{
 .identifying>input{
     width: 60% !important;
 }
+
