--- a/src/css/login2.css
+++ b/src/css/login2.css
@@ -144,7 +144,7 @@ body{
     top: 42px;
     left: 50%;
 }
-.wizard > div:first-child > div:first-child::after{
+/* .wizard > div:first-child > div:first-child::after{
     content: "";
     height: 3px;
     width: 30%;
@@ -153,7 +153,7 @@ body{
     position: absolute;
     top: 42px;
     margin: 0 20px;
-}
+} */
 .wizard > div:nth-child(3) > div:first-child::after{
     display: none;
 }
