--- a/src/css/shopping-trolley.css
+++ b/src/css/shopping-trolley.css
@@ -15,6 +15,9 @@ body {
     margin:0;
     padding: 0;
 }
+input::-ms-input-placeholder{color: #333;}
+input::-webkit-input-placeholder{color: #333;}
+input{color: #333;}
 .col-lg-1,.col-lg-10,.col-lg-11,.col-lg-12,.col-lg-2,.col-lg-3,.col-lg-4,.col-lg-5,.col-lg-6,.col-lg-7,.col-lg-8,.col-lg-9,
 .col-md-1,.col-md-10,.col-md-11,.col-md-12,.col-md-2,.col-md-3,.col-md-4,.col-md-5,.col-md-6,.col-md-7,.col-md-8,.col-md-9,
 .col-sm-1,.col-sm-10,.col-sm-11,.col-sm-12,.col-sm-2,.col-sm-3,.col-sm-4,.col-sm-5,.col-sm-6,.col-sm-7,.col-sm-8,.col-sm-9,
@@ -320,17 +323,30 @@ input::-webkit-input-placeholder{
 .shopping-trolley-bottom .checkbox-custom label:before {
     top: 40%
 }
+.shopping-trolley-bottom_left > p{
+    line-height: 48px;
+    font-size: 14px;
+    color: #333;
+    margin-left: 30%;
+}
 .shopping-trolley-bottom_right > p{
     margin: 0;
     line-height: 48px;
     font-size: 16px;
     color: #63337D;
 }
+.shopping-trolley-bottom{
+    z-index: 5;
+}
 /*+-*/
 .shopping-trolley-container_count > div > input{
     background-color: transparent;
     border: none;
     position: relative;
-    top: -2px;
+    top: 0;
     left: 8px;
+}
+.shopping-trolley-container_count > div:nth-child(2) > input{
+    top: 0px;
+    left: 15px;
 }
