修改login1 身份字号

--- a/src/css/login2.css
+++ b/src/css/login2.css
@@ -17,9 +17,20 @@ body{
 }
 .numberLogin
 {
+    color: red !important;
     display: inline-block;
     width: 100%;
+    top: 0!important;
 }
+/* .numberLogin1{
+    color: red !important;
+    display: inline-block;
+    line-height: 30px;
+    height: 30px;
+    margin-top: -9px;
+    font-size: 11px !important;
+    right: 0px !important;
+} */
 .loginInformation>div>:nth-child(1){
     font-size: 14px;
 }
