--- a/src/css/login1.css
+++ b/src/css/login1.css
@@ -49,7 +49,7 @@ body{
 .detailsItem{
     overflow: hidden;
 }
-.numberLogin{
+.numberLogin1{
     color: red !important;
     display: inline-block;
     line-height: 30px;
